[package]
name = "grim"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bevy_ecs = "0.18.0"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
